--- a/labs/lab_03_iapr_vincent.ipynb
+++ b/labs/lab_03_iapr_vincent.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "source": [
     "* **Q1 (0.5 pt)**: Why do you think the minimum Mahalanobis distance is a good OoD-ness score?\n",
-    "    * **Answer**: Points inside the OoD will be very close to the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples."
+    "    * **Answer**: Points inside the OoD will be very close to the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples. Furthermore, it is a good classifier because the distribution are not overlapped. In case of overlapping distributions, another classifier must be chosen."
    ]
   },
   {
@@ -907,7 +907,7 @@
    "metadata": {},
    "source": [
     "* **Q2 (1 pt)**: Find the best `k` among `[1, 3, 5, 9, 15, 25]` based on the validation set. What is the best `k` and accuracy?  Your results should be above (97%).\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: Based on the results founded, the best k is 3 and it gives an accuracy of 99.46%, which is a good performance."
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (1 pts)**: We evaluate your classifier on the test set like in `1.2 Q4`. Is it better than Mahalanobis distance? Why?\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: Given the two accuracies,the K-NN works better than the Mahalanobis. Nevertheless the K-NN works relatively good for small dimensions but due to the curse of dimensionality, if the samples have a lot of features, K-NN will not work well (if the number of samples remains the same)."
    ]
   },
   {
@@ -1705,7 +1705,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (1 pt)**: Are you satisfied with the results? What is the primary disadvantage of employing average pooling? Does the model overfit the data? (justify)\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: The F1-score in this case is satisfying (90% is a good result). Nevertheless, it can be observed that the model overfitts (after epoch 16), as the validation error increases but the train error still decreases."
    ]
   },
   {
