--- a/labs/lab_03_iapr_vincent.ipynb
+++ b/labs/lab_03_iapr_vincent.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "source": [
     "* **Q1 (0.5 pt)**: Why do you think the minimum Mahalanobis distance is a good OoD-ness score?\n",
-    "    * **Answer**: Points inside the OoD will be very close to the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples. Furthermore, it is a good classifier because the distribution are not overlapped. In case of overlapping distributions, another classifier must be chosen."
+    "    * **Answer**: Points belonging to in-distribution will be very close to the center of the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples. Furthermore, it is a good classifier because the distributions are not overlapped. In case of overlapping distributions, another OoD-ness score must be chosen."
    ]
   },
   {
@@ -681,7 +681,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (2 pts)**: Complete the function `compute_metrics` that computes the recall for TUMOR, STROMA, and OoD examples as well as the average recall over the 3 classes. To do so, you need to consider OoDs as a third class by assigning the prediction `-1` to filtered-out examples based on your threshold. Based on your results, conclude on the feasibility of the proposed pipeline. Propose a solution that would require the least annotation possible but that could significantly increase your OoD recall. Both Tumor and Stroma recall should be above 90%. Recall for OOD should be above 80%.\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: The implemented function seems to work reasonably good for tumor (above 98%), but less good for stroma (92%). The recall for OoD is below 90% which could be improved. Unsupervised techniques could improve the results. For instance, K-NN or K means clustering would create clusters of the different type. But in order to have good results, the differences between the two classes should be reasonably big, meaning that the distribution should not overlap."
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (1 pts)**: We evaluate your classifier on the test set like in `1.2 Q4`. Is it better than Mahalanobis distance? Why?\n",
-    "    * **Answer**: Given the two accuracies,the K-NN works better than the Mahalanobis. Nevertheless the K-NN works relatively good for small dimensions but due to the curse of dimensionality, if the samples have a lot of features, K-NN will not work well (if the number of samples remains the same)."
+    "    * **Answer**: Given the two accuracies,the K-NN works better than the Mahalanobis. Nevertheless the K-NN works relatively good for small dimensions but due to the curse of dimensionality, if the samples have a lot of features, K-NN will not work well (if the number of samples remains the same). Furthermore, the tumor recall has increased (from 98 to 100%) but the recall for OoD has decreased to fall to 81% only, which is not acceptable."
    ]
   },
   {
@@ -1608,7 +1608,7 @@
    "metadata": {},
    "source": [
     "* **Q3 (1 pt)**: Train a linear classifier using `AveragePooling` for `30` epochs, employing the `Adam` optimizer with a learning rate of `1e-3`. No need to search for optimal hyperparameters. Refer to the PyTorch documentation for guidance on constructing your optimizer. Use `H=512`. Don't worry, the training might take ~5-10 minutes. Your results should be above (87%).\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: Obtained results : 90% at epoch 16."
    ]
   },
   {
@@ -1705,7 +1705,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (1 pt)**: Are you satisfied with the results? What is the primary disadvantage of employing average pooling? Does the model overfit the data? (justify)\n",
-    "    * **Answer**: The F1-score in this case is satisfying (90% is a good result). Nevertheless, it can be observed that the model overfitts (after epoch 16), as the validation error increases but the train error still decreases."
+    "    * **Answer**: The F1-score in this case is satisfying (90% is a good result). Nevertheless, it can be observed that the model overfitts (after epoch 16), as the validation error increases but the train error still decreases. A disadvantage of using average pooling is that a set of patches will have the same value, even if one patch is a specific case (tumor for instance) and the other is a background. The result will be a mix of these two and will not make the difference."
    ]
   },
   {
@@ -1863,7 +1863,7 @@
    "metadata": {},
    "source": [
     "* **Q3 (1 pt)**: Train your linear classifier using `AttentionPooling` with `M=256`. You will train your model for `30` epochs, employing the `Adam` optimizer with a learning rate of `1e-4`. No need to search for optimal hyperparameters. Use `H=512`. Don't worry, the training should take ~5-10 minutes. Your results should be above (90%).\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: The obtained result is 92.5% at epoch 26"
    ]
   },
   {
@@ -2115,7 +2115,7 @@
    "metadata": {},
    "source": [
     "* **Q5 (1pt)**: From the visualization above, what can you interpret?\n",
-    "    * **Answer**: ..."
+    "    * **Answer**: First let's take a look at the solid. The left picture shows the attention value on top of the original images. It can be seen that the attention value is very at some specific location (white region), meaning that these regions are of interest for the decision. The same is observed on the acinar, where white regions are observed."
    ]
   }
  ],
