--- a/project/src/main.ipynb
+++ b/project/src/main.ipynb
@@ -2,6 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# -*- authors : Vincent Roduit, Filippo Quadri -*-\n",
+    "# -*- date : 2024-05-03 -*-\n",
+    "# -*- Last revision: 2024-05-03 -*-\n",
+    "# -*- python version : 3.9.18 -*-\n",
+    "# -*- Description: Notebook that summarize results-*-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> EE - 451 Image Analysis and Pattern recognition </center>\n",
+    "## <center> Ecole Polytechnique Fédérale de Lausanne </center>\n",
+    "### <center>Coin Challenge </center>\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import libraries\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "import importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import files\n",
+    "from data import Coin\n",
+    "import constants\n",
+    "importlib.reload(constants)\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = Coin(type = 'ref')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +100,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "iapr",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
