--- a/labs/lab_03_iapr_vincent.ipynb
+++ b/labs/lab_03_iapr_vincent.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "source": [
     "* **Q1 (0.5 pt)**: Why do you think the minimum Mahalanobis distance is a good OoD-ness score?\n",
-    "    * **Answer**: Points belonging to in-distribution will be very close to the center of the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples. Furthermore, it is a good classifier because the distributions are not overlapped. In case of overlapping distributions, another OoD-ness score must be chosen."
+    "    * **Answer**: Points belonging to in-distribution will be very close to the center of the distribution, therefore will have a low Mahalanobis distance. Conversely, other points will be further from the distribution and therefore will have a higher Mahalanobis distance. Thresholding on the Mahalanobis distance can be a good solution to discard these OoD samples. Furthermore, it is a good classifier because the distributions are not overlapped. Another main advantage of the Mahalanobis is the fact that it takes care of the variance of the class. If we have elliptical classes, Euclidean will not capture this aspect but Mahalanobis will. In case of overlapping distributions, another OoD-ness score must be chosen."
    ]
   },
   {
@@ -681,7 +681,7 @@
    "metadata": {},
    "source": [
     "* **Q4 (2 pts)**: Complete the function `compute_metrics` that computes the recall for TUMOR, STROMA, and OoD examples as well as the average recall over the 3 classes. To do so, you need to consider OoDs as a third class by assigning the prediction `-1` to filtered-out examples based on your threshold. Based on your results, conclude on the feasibility of the proposed pipeline. Propose a solution that would require the least annotation possible but that could significantly increase your OoD recall. Both Tumor and Stroma recall should be above 90%. Recall for OOD should be above 80%.\n",
-    "    * **Answer**: The implemented function seems to work reasonably good for tumor (above 98%), but less good for stroma (92%). The recall for OoD is below 90% which could be improved. Unsupervised techniques could improve the results. For instance, K-NN or K means clustering would create clusters of the different type. But in order to have good results, the differences between the two classes should be reasonably big, meaning that the distribution should not overlap."
+    "    * **Answer**: The implemented function seems to work reasonably good for tumor (above 98%), but less good for stroma (92%). The recall for OoD is below 90% which could be improved. The problem with the proposed pipeline is that the threshold is set manually and doesn't offer any guarantes on the reliability of the results; it is an arbitrary choice. A better solution will be to use a random number (let's say) of OoD and construct a distribution of this class. This solution allows us to construct a representation of the class and increase the performance of the classifier."
    ]
   },
   {
@@ -2115,7 +2115,7 @@
    "metadata": {},
    "source": [
     "* **Q5 (1pt)**: From the visualization above, what can you interpret?\n",
-    "    * **Answer**: First let's take a look at the solid. The left picture shows the attention value on top of the original images. It can be seen that the attention value is very at some specific location (white region), meaning that these regions are of interest for the decision. The same is observed on the acinar, where white regions are observed."
+    "    * **Answer**: First let's take a look at the solid. The left picture shows the attention value on top of the original images. It can be seen that the attention value is very at some specific location (white region), meaning that these regions are of interest for the decision. The same is observed on the acinar, where white regions are observed. Nevertheless, the white spots are more spreads. The presence of fat tissues on the left moves the attention of the image on this part and not of the one of interest. This a typical problem of the attention, where it is not possible to specify what you want to focus the attention on, but it \"learn by itself\"."
    ]
   }
  ],
