--- a/labs/lab_03_iapr_325140_329487_300952.ipynb
+++ b/labs/lab_03_iapr_325140_329487_300952.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Author 1 (sciper):** Vincent Roduit (325140)  \n",
     "**Author 2 (sciper):** Filippo Quadri (329487)   \n",
-    "**Author 3 (sciper):** Student Name 3 (xxxxx)   \n",
+    "**Author 3 (sciper):** Hugo Philippe Lagergren (300952)   \n",
     "\n",
     "**Release date:** 19.04.2024  \n",
     "**Due date:** 03.05.2024 (11:59 pm)\n",
