Add class download

--- a/project/src/main.ipynb
+++ b/project/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
    ],
    "source": [
     "#Import files\n",
-    "from data import Coin\n",
+    "from data import Coin, refCoin, trainCoin\n",
     "import constants\n",
     "importlib.reload(constants)\n",
     "\n",
@@ -64,39 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = Coin(type = 'ref')"
+    "ref_data = refCoin()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = trainCoin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from pickle files\n",
+      "An error occured:  [Errno 2] No such file or directory: '../data/train/pickle/train_index.pkl'\n",
+      "Loading data from folders\n"
+     ]
     }
    ],
    "source": [
     "train_data.load_data()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
