update load funcs

--- a/project/src/main.ipynb
+++ b/project/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,18 @@
     "import os\n",
     "import numpy as np\n",
     "import torch\n",
-    "\n",
-    "import importlib"
+    "import importlib\n",
+    "import skimage as sk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import files\n",
-    "from data import Coin, refCoin, trainCoin\n",
+    "from data import refCoin, trainCoin, testCoin\n",
     "import constants\n",
     "importlib.reload(constants)\n",
     "\n",
@@ -63,40 +54,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ref_data = refCoin()"
+    "# 1. Load different Datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = trainCoin()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from pickle files\n",
-      "An error occured:  [Errno 2] No such file or directory: '../data/train/pickle/train_index.pkl'\n",
-      "Loading data from folders\n"
+      "Loading data from pickle files\n"
      ]
     }
    ],
    "source": [
-    "train_data.load_data()"
+    "ref_data = refCoin()\n",
+    "train_data = trainCoin()\n",
+    "test_data = testCoin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4000, 6000, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref_data.raw_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_contour(images: np.ndarray):\n",
+    "    \"\"\"\n",
+    "    Find the contours for the set of images\n",
+    "    \n",
+    "    Args\n",
+    "    ----\n",
+    "    images: np.ndarray (N, 4000, 6000, 3)\n",
+    "        Source images to process\n",
+    "\n",
+    "    Return\n",
+    "    ------\n",
+    "    contours: list of np.ndarray\n",
+    "        List of N arrays containing the coordinates of the contour. Each element of the \n",
+    "        list is an array of 2d coordinates (K, 2) where K depends on the number of elements \n",
+    "        that form the contour. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Get number of images to process\n",
+    "    N, _, _, _ = np.shape(images)\n",
+    "\n",
+    "    # Fill in dummy values (fake points)\n",
+    "    contours = [np.array([[0, 0], [1, 1]]) for _ in range(N)]\n",
+    "    for idx, img in enumerate(images):\n",
+    "        gray_img = sk.color.rgb2gray(img)\n",
+    "        cnts = sk.measure.find_contours(np.transpose(gray_img), fully_connected='high')\n",
+    "        contours[idx] = cnts\n",
+    "    \n",
+    "    return contours\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours = find_contour(ref_data.raw_data)"
    ]
   }
  ],
