--- a/project/src/main_vincent.ipynb
+++ b/project/src/main_vincent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_images = []\n",
+    "for category in train_data.contours:\n",
+    "    for idx, contour in enumerate(train_data.contours[category]):\n",
+    "        list_of_images.append((train_data.data_index[category][idx],len(contour[0])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_images = sorted(list_of_images, key=lambda x: x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('L1010277', 5),\n",
+       " ('L1010279', 4),\n",
+       " ('L1010281', 8),\n",
+       " ('L1010283', 6),\n",
+       " ('L1010287', 8),\n",
+       " ('L1010288', 5),\n",
+       " ('L1010294', 5),\n",
+       " ('L1010297', 4),\n",
+       " ('L1010298', 5),\n",
+       " ('L1010300', 5),\n",
+       " ('L1010308', 9),\n",
+       " ('L1010310', 7),\n",
+       " ('L1010311', 6),\n",
+       " ('L1010318', 11),\n",
+       " ('L1010321', 9),\n",
+       " ('L1010323', 8),\n",
+       " ('L1010325', 5),\n",
+       " ('L1010328', 4),\n",
+       " ('L1010331', 8),\n",
+       " ('L1010335', 4),\n",
+       " ('L1010341', 4),\n",
+       " ('L1010345', 4),\n",
+       " ('L1010349', 4),\n",
+       " ('L1010352', 3),\n",
+       " ('L1010353', 3),\n",
+       " ('L1010356', 6),\n",
+       " ('L1010361', 1),\n",
+       " ('L1010365', 3),\n",
+       " ('L1010367', 8),\n",
+       " ('L1010369', 9),\n",
+       " ('L1010370', 17),\n",
+       " ('L1010373', 3),\n",
+       " ('L1010375', 4),\n",
+       " ('L1010377', 4),\n",
+       " ('L1010378', 4),\n",
+       " ('L1010382', 1),\n",
+       " ('L1010383', 4),\n",
+       " ('L1010388', 4),\n",
+       " ('L1010390', 4),\n",
+       " ('L1010391', 3),\n",
+       " ('L1010395', 4),\n",
+       " ('L1010405', 4),\n",
+       " ('L1010406', 5),\n",
+       " ('L1010408', 2),\n",
+       " ('L1010410', 3),\n",
+       " ('L1010413', 4),\n",
+       " ('L1010418', 2),\n",
+       " ('L1010419', 3),\n",
+       " ('L1010421', 4),\n",
+       " ('L1010422', 3),\n",
+       " ('L1010424', 5),\n",
+       " ('L1010434', 4),\n",
+       " ('L1010436', 1),\n",
+       " ('L1010440', 8),\n",
+       " ('L1010445', 3),\n",
+       " ('L1010446', 5),\n",
+       " ('L1010450', 5),\n",
+       " ('L1010454', 2),\n",
+       " ('L1010462', 4),\n",
+       " ('L1010468', 1),\n",
+       " ('L1010470', 4),\n",
+       " ('L1010475', 3),\n",
+       " ('L1010476', 7),\n",
+       " ('L1010477', 5),\n",
+       " ('L1010478', 5),\n",
+       " ('L1010479', 5),\n",
+       " ('L1010483', 4),\n",
+       " ('L1010485', 4),\n",
+       " ('L1010486', 6),\n",
+       " ('L1010487', 5),\n",
+       " ('L1010491', 8),\n",
+       " ('L1010500', 6),\n",
+       " ('L1010501', 1),\n",
+       " ('L1010503', 6),\n",
+       " ('L1010506', 3),\n",
+       " ('L1010510', 3),\n",
+       " ('L1010515', 3),\n",
+       " ('L1010517', 2),\n",
+       " ('L1010521', 3),\n",
+       " ('L1010523', 3),\n",
+       " ('L1010524', 3)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
