--- a/project/src/main_vincent.ipynb
+++ b/project/src/main_vincent.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from pickle files\n"
+     ]
+    }
+   ],
    "source": [
     "test_data = testCoin()"
    ]
@@ -119,9 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding contours\n",
+      "Creating masked images\n",
+      "Creating coin images\n"
+     ]
+    }
+   ],
    "source": [
     "#Process all the images :\n",
     "# 1. clean the images and find the contours\n",
@@ -133,34 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data.process_images()"
+    "save_pickle(train_data.coins, 'coins.pkl')\n",
+    "save_pickle(train_data.contours, 'contours.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.create_masked_images()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.create_coin_images()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images, train_labels, val_images, val_labels = create_datasets(images, labels)"
+    "train_images, train_labels, val_images, val_labels = create_splits(images, labels)"
    ]
   },
   {
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,21 +232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_aug_path = os.path.join(constants.RESULT_PATH, 'pickles')\n",
-    "if not os.path.exists(train_aug_path):\n",
-    "    os.makedirs(train_aug_path)\n",
-    "save_pickle(train_images_aug,os.path.join(train_aug_path, 'train_images_aug.pkl'))\n",
-    "save_pickle(train_labels_aug,os.path.join(train_aug_path, 'train_labels_aug.pkl'))\n",
-    "save_pickle(val_images,os.path.join(train_aug_path, 'val_images.pkl'))\n",
-    "save_pickle(val_labels,os.path.join(train_aug_path, 'val_labels.pkl'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,21 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader, val_dataloader = create_dataloader(train_images_aug, train_labels_aug, val_images, val_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_pickle(train_dataloader,os.path.join(train_aug_path, 'train_dataloader.pkl'))\n",
-    "save_pickle(val_dataloader,os.path.join(train_aug_path, 'val_dataloader.pkl'))"
+    "train_dataloader, val_dataloader = create_dataloader(train_images, train_labels, val_images, val_labels)"
    ]
   },
   {
