add smaller pickle file

--- a/project/src/main_vincent.ipynb
+++ b/project/src/main_vincent.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +229,24 @@
    "outputs": [],
    "source": [
     "train_images_aug, train_labels_aug = augment_blur(train_images_aug, train_labels_aug)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images_aug_resized = resize_images(train_images_aug, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pickle(train_images_aug_resized, 'train_images_aug_resized.pkl')"
    ]
   },
   {
